# sdc_engine

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
docs/: Method_Selection_Guide.md  build_guide.md  empirical_validation_checklist.md  sdc_pipeline_architecture.md  sdcmicro_evaluation.md  smart_rules_complete.md  user_guide.md
docs/investigations/: contribution_metric_consumer_audit.md  retry_engine_read.md  spec_12_f4_reid_floor.md  spec_15_01_mid_pipeline_multiplier.md  spec_16_gate_metric_calibration.md  spec_16_readiness_rc_family_preemption.md  spec_16_rule_firing_audit.md  spec_18_feature_population_sweep.md  spec_19_closeout.md  spec_19_phase_1_2_plan.md  spec_19_phase_1_3_parity_report.md  spec_19_phase_1_feature_diff.md  spec_19_phase_2_closeout.md  spec_20_b1_p4b_closeout.md  spec_22_summary.md  (+2 more)
scripts/: regenerate_snapshots.py  run_sdcmicro_evaluation.py  spec_19_feature_diff.py  spec_19_parity_check.py
streamlit_app/: app.py  components.py  state.py
tests/: conftest.py  test_cross_metric.py  test_degenerate_inputs.py  test_dtype_fuzz.py  test_feasibility_badge.py  test_kanon_int32.py  test_method_metric_coverage.py  test_no_legacy_imports.py  test_perturbative_challenge.py  test_pipeline_integration.py  test_preprocessing_common_cases.py  test_rule_audit_trace.py  test_rule_selection_known_cases.py  test_systemic_data_contracts.py  test_systemic_metric_consistency.py  test_systemic_rule_coverage.py  test_systemic_rule_metric.py  test_systemic_rule_ordering.py  test_systemic_signature_stability.py
tools/: classify_columns.py
(+92 files in other folders)
