[tool.poetry]
name = "sdc_engine"
version = "0.1.0"
description = "Statistical Disclosure Control toolkit for microdata anonymization"
authors = ["Eirini Mantzouni <emantzo@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "sdc_engine", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
streamlit = "^1.29.0"
plotly = "^5.18.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.extras]
r-backend = ["rpy2"]

[tool.poetry.dependencies.rpy2]
version = "^3.5.0"
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
